Set img sizes, added meta description

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -23,7 +23,7 @@
         </p>
 
         <p>
-          I am enthusiastic about Computer Graphics, Augmented Reality and Game Development. 
+          I am enthusiastic about Computer Graphics, VR/AR experiences and Game Development. 
           I like solving problems in a optimal way to bring efficiently solutions. 
           I have knowledge with Unity, C#, Godot, SDL2 and C++.
         </p>
