feat: refactor bg mixin

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
+<div class="glitch-wrapper"></div>
+
 <div class="d-flex flex-column h-100">
   <app-navbar></app-navbar>
   <div class="d-flex flex-column flex-grow-1">
     <router-outlet></router-outlet>
   </div>
 </div>
-
-<div class="glitch-container"><div class="glitch-background"></div></div>
