--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<div class="glitch-wrapper"></div>
-
-<div class="d-flex flex-column h-100">
+<div class="site-content">
   <app-navbar></app-navbar>
-  <div class="d-flex flex-column flex-grow-1">
-    <router-outlet></router-outlet>
-  </div>
+  <router-outlet></router-outlet>
 </div>
