--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,29 +1,41 @@
-video {
-  height: auto;
-  max-width: 40rem;
-}
+.home {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 
-iframe {
-  width: 300px;
-  height: 168.75px;
-
-  @media (min-width: 600px) {
-    width: 560px;
-    height: 315px;
+  .title {
+    margin-right: 1rem;
+    margin-left: 1rem;
   }
 
-  @media (min-width: 800px) {
-    width: 680px;
-    height: 382.5px;
-  }
+  .card {
+    max-width: 20rem;
+    background: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    border-radius: 8px;
+    padding-bottom: 0.5rem;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
 
-  @media (min-width: 1200px) {
-    width: 800px;
-    height: 450px;
-  }
+    img {
+      height: auto;
+      max-width: 100%;
+    }
 
-  @media (min-width: 1440px) {
-    width: 992px;
-    height: 558px;
+    .card-body {
+      padding: 0 0.6rem;
+
+      .card-header {
+        display: flex;
+        flex-direction: column;
+      }
+
+      .card-links {
+        margin-top: 1rem;
+        display: flex;
+        justify-content: space-between;
+      }
+    }
   }
 }
