--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,18 @@ body {
   margin: 0 auto;
   max-width: 1440px;
 }
+
+h1 {
+  font-size: 2rem;
+  margin: 0 0 2rem 0;
+}
+
+h2,
+h3 {
+  font-size: 1.25rem;
+  margin: 0 0 0.5rem 0;
+}
+
+p {
+  font-size: 1rem;
+}
