--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,12 @@
       constantly adding new projects, features, and insights to this site as I
       learn and grow as a programmer.
     </p>
+
+    <p>
+      I am currently working as a software enginner at Kavak.com. I hold an BSc
+      degree in Computer Science. Below you can find my portfolio highlighting
+      some of my development work.
+    </p>
   </div>
 
   <section>
@@ -17,15 +23,17 @@
         which enrich user experience providing a faster, responsive and
         consistent navigation. I’ve been working as a Frontend Engineer for
         almost 4 years, developing applications using tools such as Angular,
-        Stencil, TypeScript, JavaScript, RxJS, Jest, HTML, SCSS and Storybook.
-        The architecture is the most interesting area for me for now and I am
-        currently learning about microfront.
+        React, Web Components, RxJS, Jest and Storybook. The perfomance
+        optimization is the most interesting area for me and I am currently
+        learning about microfrontend and Qwik.
       </p>
     </div>
 
     <div class="content">
       <ng-container *ngFor="let project of frontend">
-        <ng-container *ngTemplateOutlet="cardTemplate; context: { card: project }"></ng-container>
+        <ng-container
+          *ngTemplateOutlet="cardTemplate; context: { card: project }"
+        ></ng-container>
       </ng-container>
     </div>
   </section>
@@ -37,30 +45,54 @@
       <p>
         I'm entusiastic about videogames and I have been develop several
         prototypes. I have almost 10 years of expericience using Unity Engine
-        and in the future I would like to work as Game Developer.
+        and I would like to work as Game Developer in the future. Also VR picked
+        my attention and I'm currently learning more about it.
       </p>
     </div>
 
     <div class="content">
       <ng-container *ngFor="let project of videogames">
-        <ng-container *ngTemplateOutlet="cardTemplate; context: { card: project }"></ng-container>
+        <ng-container
+          *ngTemplateOutlet="cardTemplate; context: { card: project }"
+        ></ng-container>
       </ng-container>
     </div>
   </section>
 </main>
 
-<ng-template #cardTemplate let-card="card">
+<ng-template
+  #cardTemplate
+  let-card="card"
+>
   <div class="card">
-    <div *ngIf="card.cover" class="pic-wrapper">
+    <div
+      *ngIf="card.cover"
+      class="pic-wrapper"
+    >
       <picture>
-        <source type="image/webp" [srcset]="card.cover + '.webp'" />
-        <source type="image/jpg" [srcset]="card.cover + '.jpg'" />
-        <img width="320" height="180" [alt]="card.title" draggable="false" />
+        <source
+          type="image/webp"
+          [srcset]="card.cover + '.webp'"
+        />
+        <source
+          type="image/jpg"
+          [srcset]="card.cover + '.jpg'"
+        />
+        <img
+          width="320"
+          height="180"
+          [alt]="card.title"
+          draggable="false"
+          loading="lazy"
+        />
       </picture>
 
-      <div *ngIf="card?.startDate || card?.endDate" class="date">
-        <span>{{ card?.startDate? card?.startDate + ' -' : '' }} {{ card?.endDate === -1? 'present' :
-          card?.endDate}}</span>
+      <div
+        *ngIf="card?.startDate || card?.endDate"
+        class="date"
+      >
+        <span>{{ card?.startDate ? card?.startDate + " -" : "" }}
+          {{ card?.endDate === -1 ? "present" : card?.endDate }}</span>
       </div>
     </div>
 
@@ -75,7 +107,10 @@
       </div>
 
       <div class="card-links">
-        <a *ngFor="let link of card?.links" [href]="link.zelda">
+        <a
+          *ngFor="let link of card?.links"
+          [href]="link.zelda"
+        >
           {{ link.name }}
         </a>
       </div>
