--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,10 +8,9 @@
   </div>
 
   <ul [ngClass]="{ 'active': active }" (click)="toogle()">
-    <!-- <li><a routerLink="/home">Home</a></li> -->
-    <li><a href="https://github.com/jotaate" target="_blank">GitHub</a></li>
-    <li><a href="https://www.linkedin.com/in/jotaate/" target="_blank">LinkedIn</a></li>
-    <li><a href="https://www.youtube.com/c/jotaate" target="_blank">YouTube</a></li>
-    <li><a href="https://jotaate.github.io/assets/cv.pdf" target="_blank">CV</a></li>
+    <li><a href="https://github.com/02900" target="_blank">GitHub</a></li>
+    <li><a href="https://www.linkedin.com/in/juanortizte/" target="_blank">LinkedIn</a></li>
+    <li><a href="https://www.youtube.com/channel/UC_Az4_xfAoNWq0F8QFR9D1w" target="_blank">YouTube</a></li>
+    <li><a href="https://02900.github.io/assets/cv.pdf" target="_blank">CV</a></li>
   </ul>
 </nav>
