--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="site-content">
-  <app-navbar></app-navbar>
+  <!-- <app-navbar></app-navbar> -->
   <router-outlet></router-outlet>
 </div>
