--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,119 +1,120 @@
 <main class="container">
   <div class="description">
-    <h1>Juan Ortiz</h1>
+    <h1>Miguel Ortiz</h1>
     <p>
-      Welcome! Thank you for taking the time to look through my portfolio - I am
-      constantly adding new projects, features, and insights to this site as I
-      learn and grow as a programmer.
+      ¡Bienvenido! Gracias por tomarte el tiempo de revisar mi portfolio. Estoy
+      en constante aprendizaje y crecimiento como ingeniero civil, y
+      continuamente agrego nuevos proyectos, características e innovaciones a
+      este sitio.
     </p>
 
     <p>
-      I am currently working as a software enginner at Kavak.com. I hold an BSc
-      degree in Computer Science. Below you can find my portfolio highlighting
-      some of my development work.
+      Actualmente, estoy trabajando como ingeniero civil independiente, con una
+      destacada actividad en la plataforma freelancer.es. Soy egresado de la
+      Universidad de Oriente, especializado en Ingeniería Civil. Aquí puedes
+      encontrar una selección de mis trabajos más destacados.
+    </p>
+
+
+    <p>
+      Disfruto colaborando estrechamente con mis clientes para planificar y
+      diseñar espacios eficientes y atractivos. En los últimos años, me he
+      enfocado en proyectos de arquitectura que implican la distribución de
+      espacios y la incorporación de mobiliario para oficinas, residencias y
+      comercios en general.
+    </p>
+
+    <p>
+      He desarrollado habilidades sólidas para realizar parcelamientos de
+      terrenos, así como la distribución de espacios para estacionamientos de
+      semi-trailer truck y todo tipo de vehículos. Para estos proyectos,
+      utilizo software especializado como Vehicle Tracking de Autodesk, y
+      tengo la capacidad de ubicar lotes de terreno con georeferencia.
+    </p>
+
+    <p>
+      Mi experiencia se extiende durante casi 20 años, y a lo largo de este
+      tiempo, he adquirido proficiencia en el uso de diversas herramientas,
+      como AutoCAD 2D, Civil 3D, SketchUp, Photoshop e Illustrator. La
+      optimización y eficiencia en la ejecución de los proyectos es un aspecto
+      que siempre busco mejorar.
+    </p>
+
+    <p>
+      Uno de los elementos que me apasiona es la exploración de nuevas
+      tecnologías y técnicas. Actualmente, estoy estudiando más sobre la
+      aplicación de Sketch en proyectos de Arquitectura.
+    </p>
+
+    <p>
+      En el futuro, me gustaría expandir aún más mis habilidades y
+      experiencias en diseño arquitectónico y urbanismo. Agradezco tu interés
+      en mi trabajo y espero tener la oportunidad de colaborar en tu próximo
+      proyecto.
     </p>
   </div>
 
   <section>
     <div class="description">
-      <h2>Frontend Engineer</h2>
+      <h2>Distribucion de terrenos por lotes (Parcelamiento)</h2>
 
-      <p>
-        I enjoy working closely with teammates to build robust applications
-        which enrich user experience providing a faster, responsive and
-        consistent navigation. I’ve been working as a Frontend Engineer for
-        almost 4 years, developing applications using tools such as Angular,
-        React, Web Components, RxJS, Jest and Storybook. The perfomance
-        optimization is the most interesting area for me and I am currently
-        learning about microfrontend and Qwik.
-      </p>
     </div>
 
     <div class="content">
-      <ng-container *ngFor="let project of frontend">
-        <ng-container
-          *ngTemplateOutlet="cardTemplate; context: { card: project }"
-        ></ng-container>
-      </ng-container>
+
     </div>
   </section>
 
   <section>
     <div class="description">
-      <h2>Game Developer</h2>
-
-      <p>
-        I'm entusiastic about videogames and I have been develop several
-        prototypes. I have almost 10 years of expericience using Unity Engine
-        and I would like to work as Game Developer in the future. Also VR picked
-        my attention and I'm currently learning more about it.
-      </p>
+      <h2>Elaboración de Mapas georefrenciados</h2>
     </div>
 
     <div class="content">
-      <ng-container *ngFor="let project of videogames">
-        <ng-container
-          *ngTemplateOutlet="cardTemplate; context: { card: project }"
-        ></ng-container>
-      </ng-container>
+
+    </div>
+  </section>
+
+  <section>
+    <div class="description">
+      <h2>
+        Distribucion de terrenos para estacionamientos Semi-Trailler y vehiculos
+        tipos en general
+      </h2>
+    </div>
+
+    <div class="content">
+
+    </div>
+  </section>
+
+  <section>
+    <div class="description">
+      <h2>Modelado 3D con Sketchup</h2>
+    </div>
+
+    <div class="content">
+
+    </div>
+  </section>
+
+  <section>
+    <div class="description">
+      <h2>Plantas de Arquitectura.</h2>
+    </div>
+
+    <div class="content">
+
+    </div>
+  </section>
+
+  <section>
+    <div class="description">
+      <h2>Distribucion de espacios e incorporacion de mobiliario.</h2>
+    </div>
+
+    <div class="content">
+
     </div>
   </section>
 </main>
-
-<ng-template
-  #cardTemplate
-  let-card="card"
->
-  <div class="card">
-    <div
-      *ngIf="card.cover"
-      class="pic-wrapper"
-    >
-      <picture>
-        <source
-          type="image/webp"
-          [srcset]="card.cover + '.webp'"
-        />
-        <source
-          type="image/jpg"
-          [srcset]="card.cover + '.jpg'"
-        />
-        <img
-          width="320"
-          height="180"
-          [alt]="card.title"
-          draggable="false"
-          loading="lazy"
-        />
-      </picture>
-
-      <div
-        *ngIf="card?.startDate || card?.endDate"
-        class="date"
-      >
-        <span>{{ card?.startDate ? card?.startDate + " -" : "" }}
-          {{ card?.endDate === -1 ? "present" : card?.endDate }}</span>
-      </div>
-    </div>
-
-    <div class="card-body">
-      <div class="card-header">
-        <h3>{{ card?.title }}</h3>
-      </div>
-
-      <div class="card-description">
-        <p>{{ card?.description }}</p>
-        <p>{{ card?.subtitle }}</p>
-      </div>
-
-      <div class="card-links">
-        <a
-          *ngFor="let link of card?.links"
-          [href]="link.zelda"
-        >
-          {{ link.name }}
-        </a>
-      </div>
-    </div>
-  </div>
-</ng-template>
