--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,6 @@
       encontrar una selección de mis trabajos más destacados.
     </p>
 
-
     <p>
       Disfruto colaborando estrechamente con mis clientes para planificar y
       diseñar espacios eficientes y atractivos. En los últimos años, me he
@@ -27,17 +26,17 @@
     <p>
       He desarrollado habilidades sólidas para realizar parcelamientos de
       terrenos, así como la distribución de espacios para estacionamientos de
-      semi-trailer truck y todo tipo de vehículos. Para estos proyectos,
-      utilizo software especializado como Vehicle Tracking de Autodesk, y
-      tengo la capacidad de ubicar lotes de terreno con georeferencia.
+      semi-trailer truck y todo tipo de vehículos. Para estos proyectos, utilizo
+      software especializado como Vehicle Tracking de Autodesk, y tengo la
+      capacidad de ubicar lotes de terreno con georeferencia.
     </p>
 
     <p>
       Mi experiencia se extiende durante casi 20 años, y a lo largo de este
-      tiempo, he adquirido proficiencia en el uso de diversas herramientas,
-      como AutoCAD 2D, Civil 3D, SketchUp, Photoshop e Illustrator. La
-      optimización y eficiencia en la ejecución de los proyectos es un aspecto
-      que siempre busco mejorar.
+      tiempo, he adquirido proficiencia en el uso de diversas herramientas, como
+      AutoCAD 2D, Civil 3D, SketchUp, Photoshop e Illustrator. La optimización y
+      eficiencia en la ejecución de los proyectos es un aspecto que siempre
+      busco mejorar.
     </p>
 
     <p>
@@ -47,21 +46,29 @@
     </p>
 
     <p>
-      En el futuro, me gustaría expandir aún más mis habilidades y
-      experiencias en diseño arquitectónico y urbanismo. Agradezco tu interés
-      en mi trabajo y espero tener la oportunidad de colaborar en tu próximo
-      proyecto.
+      En el futuro, me gustaría expandir aún más mis habilidades y experiencias
+      en diseño arquitectónico y urbanismo. Agradezco tu interés en mi trabajo y
+      espero tener la oportunidad de colaborar en tu próximo proyecto.
     </p>
   </div>
 
   <section>
     <div class="description">
-      <h2>Distribucion de terrenos por lotes (Parcelamiento)</h2>
-
+      <h2>Distribución de terrenos por lotes (Parcelamiento)</h2>
     </div>
 
     <div class="content">
+      <app-gallery [images]="parcelamientoImages"></app-gallery>
+    </div>
+  </section>
 
+  <section>
+    <div class="description">
+      <h2>Distribución de espacios e incorporacion de mobiliario.</h2>
+    </div>
+
+    <div class="content">
+      <app-gallery [images]="mobiliarioImgs"></app-gallery>
     </div>
   </section>
 
@@ -70,9 +77,7 @@
       <h2>Elaboración de Mapas georefrenciados</h2>
     </div>
 
-    <div class="content">
-
-    </div>
+    <div class="content"></div>
   </section>
 
   <section>
@@ -83,9 +88,7 @@
       </h2>
     </div>
 
-    <div class="content">
-
-    </div>
+    <div class="content"></div>
   </section>
 
   <section>
@@ -93,28 +96,14 @@
       <h2>Modelado 3D con Sketchup</h2>
     </div>
 
-    <div class="content">
-
-    </div>
+    <div class="content"></div>
   </section>
 
   <section>
     <div class="description">
-      <h2>Plantas de Arquitectura.</h2>
+      <h2>Plantas de Arquitectura</h2>
     </div>
 
-    <div class="content">
-
-    </div>
-  </section>
-
-  <section>
-    <div class="description">
-      <h2>Distribucion de espacios e incorporacion de mobiliario.</h2>
-    </div>
-
-    <div class="content">
-
-    </div>
+    <div class="content"></div>
   </section>
 </main>
